# conference

./: .bumpversion.cfg  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  config.yml  index.html  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
code-of-conduct/: index.html
code-of-conduct/enforcement-procedures/: index.html
code-of-conduct/reporting/: index.html
committees/: index.html
committees/code-of-conduct/: index.html
committees/communication/: index.html
committees/diversity/: index.html
committees/experience/: index.html
committees/infrastructure/: index.html
committees/on-site-ops/: index.html
committees/operational-model/: index.html
committees/program/: index.html
committees/steering/: index.html
committees/swag/: index.html
committees/video/: index.html
docs/: help.md  index.md  installation.md  license.md  mission.md  office.md  preparation.md  timeline.md  to-be-announced.md  zen.md
docs/code-of-conduct/: enforcement-procedures.md  index.md  reporting.md
docs/committees/: code-of-conduct.md  communication.md  diversity.md  experience.md  index.md  infrastructure.md  on-site-ops.md  operational-model.md  swag.md  (+3 more)
guidelines/: index.html
help/: index.html
installation/: index.html
license/: index.html
mission/: index.html
office/: index.html
preparation/: index.html
scripts/: extend_config.py  hook_add_logo_to_social_cards.py
search/: search_index.json
stylesheets/: extra.css
timeline/: index.html
to-be-announced/: index.html
zen/: index.html
(+46 files in other folders)
