[project]
name = "Conference"
version = "1.0.0"
description = "Template for organizing a volunteer-driven conference."
authors = [
    { name = "Alexander CS Hendorf", email = "alexander@pioneershub.org" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/PioneersHub/confernce"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",  # pylint
    "TID",  # tidy
    "I",  # isort
    "N",  # pep8-naming
    "UP"  # pyupgrade
]
ignore = [
    "E501",  # may cause conflicts with ruff formatter
    "W191"
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true